fix display on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@
 * {  margin: 0;}
 body {
   font-family: "Ubuntu", sans-serif;
-  background: #1a1919;
+  background: #000d1a;
   color: #f0f8ff;
 }
